--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dmg": {
       "icon": "resources/osx/dmg-icon.icns",
       "background": "resources/osx/dmg-background.png"
+    },
+    "linux": {
+      "target": "snap"
     }
   },
   "directories": {
@@ -35,7 +38,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "electron": "1.3.3",
-    "electron-builder": "^5.12.1",
+    "electron-builder": "^19.50.0",
     "electron-mocha": "^3.0.0",
     "fs-jetpack": "^0.9.0",
     "gulp": "^3.9.0",
